--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,51 @@
-# Dependencies
-node_modules/
-__pycache__/
-*.pyc
-.venv/
-venv/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Environment
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# env files (can opt-in for committing if needed)
 .env
 .env.local
 .env.*.local
+!.env.example
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
+# vercel
+.vercel
 
-# OS
-.DS_Store
-Thumbs.db
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-# Build
-dist/
-build/
-*.egg-info/
+/src/generated/prisma
 
-# Logs
-*.log
-npm-debug.log*
-
-# Coverage
-coverage/
-.nyc_output/
+# database
+prisma/data/
+*.db
+*.db-journal
