--- a/.env.example
+++ b/.env.example
@@ -17,9 +17,9 @@ QWEN_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
 DEEPSEEK_API_KEY=""
 DEEPSEEK_BASE_URL="https://api.deepseek.com/v1"
 
-# Cloudflare R2
-R2_ACCOUNT_ID=""
-R2_ACCESS_KEY_ID=""
-R2_SECRET_ACCESS_KEY=""
-R2_BUCKET_NAME="inkrement-uploads"
-R2_PUBLIC_URL=""
+# 阿里云 OSS（图片存储）
+ALIYUN_OSS_REGION=""                          # 如 oss-cn-shanghai
+ALIYUN_OSS_ACCESS_KEY_ID=""
+ALIYUN_OSS_ACCESS_KEY_SECRET=""
+ALIYUN_OSS_BUCKET="inkrement-uploads"
+ALIYUN_OSS_ENDPOINT=""                        # 如 https://oss-cn-shanghai.aliyuncs.com
