--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ ALIYUN_SMS_TEMPLATE_CODE=""
 
 # AI 模型
 QWEN_API_KEY=""
+QWEN_MODEL="qwen-max"  # 可选: qwen-max / qwen-plus / qwen-turbo
 QWEN_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
 DEEPSEEK_API_KEY=""
 DEEPSEEK_BASE_URL="https://api.deepseek.com/v1"
